# starling-fbar

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.githooks/: pre-commit
starling/: main.py
tests/: test_main.py
